--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.sonatype.nexus.examples</groupId>
   <artifactId>simple-project</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>2.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>simple-project</name>
+
   <scm>
     <connection>scm:git:https://github.com/mickbozovic/simple-project</connection>
+    <url>http://github.com/mickbozovic/simple-project</url>
+    <developerConnection>scm:git:https://github.com/mickbozovic/simple-project.git</developerConnection>
+    <tag>HEAD</tag>
   </scm>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -18,18 +22,13 @@
     <repository>
       <id>nexus</id>
       <name>Nexus Releases</name>
-      <url>http://192.168.99.100:32768/service/local/staging/deploy/maven2</url>
+      <url>http://192.168.99.100:32768/content/repositories/releases</url>
     </repository>
     <snapshotRepository>
       <id>nexus</id>
       <name>Nexus Snapshot</name>
       <url>http://192.168.99.100:32768/content/repositories/snapshots</url>
     </snapshotRepository>
-    <site>
-      <id>nexus</id>
-      <name>Nexus Sites</name>
-      <url>dav:http://192.168.99.100:32768/content/sites/site/</url>
-    </site>
   </distributionManagement>
   <build>
     <plugins>
@@ -46,6 +45,17 @@
         <configuration>
           <locales>en,fr</locales>
         </configuration>
+      </plugin>
+
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-release-plugin</artifactId>
+         <version>2.4.2</version>
+         <configuration>
+            <tagNameFormat>v@{project.version}</tagNameFormat>
+            <autoVersionSubmodules>true</autoVersionSubmodules>
+            <releaseProfiles>releases</releaseProfiles>
+         </configuration>
       </plugin>
     </plugins>
   </build>
@@ -172,4 +182,33 @@
       <version>0.0.6</version>
     </dependency>
   </dependencies>
+
+  <profiles>
+     <profile>
+        <id>releases</id>
+        <build>
+           <plugins>
+              <plugin>
+                 <groupId>org.sonatype.plugins</groupId>
+                 <artifactId>nexus-staging-maven-plugin</artifactId>
+                 <version>1.5.1</version>
+                 <executions>
+                    <execution>
+                       <id>default-deploy</id>
+                       <phase>deploy</phase>
+                       <goals>
+                          <goal>deploy</goal>
+                       </goals>
+                    </execution>
+                 </executions>
+                 <configuration>
+                    <serverId>nexus</serverId>
+                    <nexusUrl>http://192.168.99.100:32768/</nexusUrl>
+                    <skipStaging>true</skipStaging>
+                 </configuration>
+              </plugin>
+           </plugins>
+        </build>
+     </profile>
+  </profiles>
 </project>
