--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.sonatype.nexus.examples</groupId>
   <artifactId>simple-project</artifactId>
-  <version>2.0.5-SNAPSHOT</version>
+  <version>2.0.6-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>simple-project</name>
@@ -54,7 +54,27 @@
             <skip>true</skip>
          </configuration>
       </plugin>
-      
+
+      <plugin>
+         <groupId>org.sonatype.plugins</groupId>
+         <artifactId>nexus-staging-maven-plugin</artifactId>
+         <version>1.5.1</version>
+         <executions>
+            <execution>
+               <id>default-deploy</id>
+               <phase>deploy</phase>
+               <goals>
+                  <goal>deploy</goal>
+               </goals>
+            </execution>
+         </executions>
+         <configuration>
+            <serverId>nexus</serverId>
+            <nexusUrl>http://192.168.99.100:32768/</nexusUrl>
+            <skipStaging>true</skipStaging>
+         </configuration>
+      </plugin>
+
       <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
